# fgstd

./: CMakeLists.txt  README.md
fgstd/: CMakeLists.txt  _op_builder.h  _typelist_builder.h  algo.h  allocator.h  bit.h  bytebuf.h  bytebuf_def.h  containers.h  cppext.h  dummy.cpp  expr.h  expr_def.h  hashmap_def.h  hashmap_impl.h  iterator.h  mem.h  multivector_def.h  multivector_impl.h  op.h  op_def.h  op_scalar.h  op_sse.h  op_traits.h  platform.h  pointer.h  scalar.h  traits.h  typelist.h  types.h  util.h  vector_def.h  vector_impl.h
test/: CMakeLists.txt  bench1.cpp  expr1.cpp
